--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-    <script src="commands.js"></script>
+    <link rel="stylesheet" href="./static/style.css">
+    <script src="./static/main.js"></script>
+    <script src="./static/commands.js"></script>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 
 
         <Header>
-            <br><br>
-
+            <br>
+            <br>
             <h2 class="m-3">
                 Emanuel's SpeechRecognition <br> <span>light</span> (client-side) version POC
             </h2>
-
-            <br><br>
+            <br>
+            <br>
         </Header>
 
         <Main>
@@ -37,12 +37,10 @@
                     Known Commands:
                 </h4>
                 <ul id="known-commands">
-
                 </ul>
             </div>
 
-            
-            <hr><br>
+            <hr>
             
             <div class="mt-3" style="text-align: start">
                 <em>
@@ -62,7 +60,7 @@
                 </em>
             </div>
 
-            <hr><br>
+            <hr>
 
             <span class="dropdown m-3">
                 <button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"
@@ -94,6 +92,8 @@
                     aria-describedby="inputGroup-sizing-default" id="params" disabled>
             </div>
 
+            <br>
+            <br>
         </Main>
 
 
